# mako2cli

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/mako2cli/: DataLoader.py  Renderer.py  TemplateEngine.py  __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_dataloader.py  test_renderer.py  test_template_engine.py
